# gmboy

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  TESTS.md  build.rs
.cargo/: config.toml
android/: Cargo.toml  build-debug.sh  build.sh  gradle.properties  local.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml
android/src/: file_dialog.rs  file_system.rs  filesystem.rs  java.rs  lib.rs  native.rs
app/: Cargo.toml
app/benches/: bench.rs
app/shaders/: AAScale2x.fsh  crt.frag  lcd.frag  master.frag  master.vert  mono_lcd.frag  scale2x.frag  scale4x.frag
app/src/: app.rs  audio.rs  battery.rs  cmd.rs  config.rs  file_browser.rs  file_manager.rs  lib.rs  menu.rs  notification.rs  palette.rs  roms.rs
app/src/input/: bindings.rs  button.rs  combo.rs  config.rs  emu.rs  gamepad.rs  handler.rs  keyboard.rs  mod.rs
app/src/menu/: buffer.rs  factory.rs  files.rs  handler.rs  item.rs  list.rs  menu.rs  mod.rs  navigation.rs  roms.rs
app/src/video/: char.rs  draw_text.rs  filter.rs  font.rs  frame_blend.rs  gl_backend.rs  mod.rs  overlay.rs  sdl2_backend.rs  shader.rs  text.rs  video.rs
core/: Cargo.toml
core/benches/: bench.rs
core/src/: bus.rs  debugger.rs  lib.rs
core/src/apu/: apu.rs  hpf.rs  mixer.rs  mod.rs  registers.rs
core/src/apu/channels/: channel.rs  mod.rs  noise_channel.rs  square_channel.rs  wave_channel.rs
core/src/apu/timers/: envelope_timer.rs  length_timer.rs  mod.rs  period_timer.rs  sweep_timer.rs
core/src/auxiliary/: clock.rs  dma.rs  io.rs  joypad.rs  ram.rs  timer.rs
core/src/cart/: cart.rs  header.rs  mbc.rs  mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  mod.rs
core/src/cpu/: cpu.rs  execute.rs  fetch.rs  flags.rs  flags_ctx.rs  flags_op.rs  interrupts.rs  mod.rs  registers.rs  stack.rs
core/src/cpu/instructions/: address_mode.rs  condition.rs  fetch.rs  instruction.rs  mod.rs  opcode.rs  opcodes.rs
core/src/cpu/instructions/arithmetic/: adc.rs  add.rs  cp.rs  dec.rs  inc.rs  sbc.rs  sub.rs
core/src/cpu/instructions/bitwise/: and.rs  cpl.rs  or.rs  xor.rs
core/src/cpu/instructions/interrupt/: di.rs  ei.rs  halt.rs
core/src/cpu/instructions/jump/: call.rs  jp.rs  jr.rs  ret.rs  reti.rs  rst.rs
core/src/cpu/instructions/load/: ld.rs  ldh.rs  mod.rs  pop.rs  push.rs
core/src/cpu/instructions/misc/: cb.rs  ccf.rs  daa.rs  mod.rs  nop.rs  prefix.rs  scf.rs  stop.rs
core/src/cpu/instructions/rotate/: mod.rs  rla.rs  rlca.rs  rra.rs  rrca.rs
core/src/cpu/jit/: jit_x64.rs  mod.rs
core/src/cpu/jit/x64/: compiler.rs  mod.rs  opcode.rs
core/src/emu/: battery.rs  config.rs  ctx.rs  emu.rs  mod.rs  runtime.rs  save_state.rs  state.rs
core/src/ppu/: fetcher.rs  fifo.rs  framebuffer.rs  lcd.rs  mod.rs  oam.rs  palette.rs  ppu.rs  sprite.rs  sprites.rs  tile.rs  vram.rs  window.rs
core/tests/: mod.rs
core/tests/blargg/: util.rs
core/tests/gbmicrotest/: mod.rs  utils.rs
core/tests/mooneye/: mod.rs  util.rs
core/tests/sm83/: mod.rs  util.rs
core/tests/visual/: mod.rs  util.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  inspect.rs  main.rs  report.rs  rom.rs
crates/cli/src/commands/: check.rs  mod.rs  run.rs  score.rs
crates/core/: Cargo.toml
crates/core/benches/: bench.rs
crates/core/src/: bus.rs  harness.rs  lib.rs
crates/core/src/apu/: apu.rs  hpf.rs  mixer.rs  mod.rs  registers.rs
crates/core/src/apu/channels/: channel.rs  noise_channel.rs  square_channel.rs  wave_channel.rs
crates/core/src/apu/timers/: envelope_timer.rs  length_timer.rs  period_timer.rs  sweep_timer.rs
crates/core/src/auxiliary/: clock.rs  dma.rs  io.rs  timer.rs
crates/core/src/cart/: cart.rs  mbc.rs  mbc3.rs
crates/core/src/cpu/: cpu.rs  fetch.rs  flags_op.rs  mod.rs
crates/core/src/cpu/instructions/arithmetic/: dec.rs  sub.rs
crates/core/src/cpu/instructions/bitwise/: and.rs  cpl.rs
crates/core/src/emu/: emu.rs
crates/core/src/ppu/: cgb_boot_palette.rs  fetcher.rs  fifo.rs  framebuffer.rs  lcd.rs  mod.rs  oam.rs  ppu.rs  sprites.rs  tile.rs  vram.rs  window.rs
crates/core/tests/: mod.rs
crates/core/tests/blargg/: mod.rs  util.rs
crates/core/tests/gbmicrotest/: utils.rs
crates/core/tests/mooneye/: mod.rs  util.rs
crates/core/tests/rtc/: mod.rs
crates/core/tests/same_suite/: mod.rs
crates/core/tests/visual/: colorization.rs  mealybug.rs  mod.rs  util.rs
desktop/: Cargo.toml
desktop/shaders/: flat_crt.fsh  master.frag  master.vert
desktop/src/: app.rs  audio.rs  config.rs  input.rs  library.rs  main.rs  menu.rs  roms.rs  ui.rs
desktop/src/input/: bindings.rs  button.rs  combo.rs  combos.rs  config.rs  gamepad.rs  handler.rs  keyboard.rs  mod.rs  state.rs
desktop/src/ui/: audio.rs  debug_window.rs  events.rs  mod.rs  text.rs  ui.rs
desktop/src/video/: char.rs  draw_text.rs  filter.rs  font.rs  frame_blend.rs  game_window.rs  gl_backend.rs  main_window.rs  menu.rs  mod.rs  notification.rs  overlay.rs  popup.rs  sdl2_backend.rs  sdl2_renderer.rs  sdl2_text.rs  sdl2_tile_renderer.rs  sdl2_tiles.rs  sdl_backend.rs  shader.rs  tiles.rs  tiles_window.rs  ui.rs  video.rs
emu/: Cargo.toml
emu/benches/: bench.rs
emu/src/: lib.rs  mod.rs
emu/src/apu/: apu.rs  dac.rs  mixer.rs
emu/src/apu/channels/: wave_channel.rs
emu/src/apu/timers/: envelope_timer.rs
emu/src/auxiliary/: dma.rs  ram.rs  timer.rs
emu/src/cart/: cart.rs  mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs
emu/src/cpu/instructions/: condition_type.rs
emu/src/cpu/instructions/arithmetic/: sbc.rs
emu/src/cpu/instructions/bitwise/: and.rs  mod.rs
emu/src/cpu/instructions/interrupt/: halt.rs
emu/src/cpu/instructions/jump/: jp.rs
emu/src/cpu/instructions/misc/: mod.rs
emu/src/emu/: battery.rs  ctx.rs  emu.rs  mod.rs  save_state.rs
emu/src/ppu/: oam.rs  tile.rs  vram.rs  window.rs
emu/tests/: mod.rs
emu/tests/blargg/: util.rs
emu/tests/mooneye/: util.rs
emu/tests/sm83/: mod.rs  util.rs
web/: Cargo.toml  README.md  index.html
web/assets/: README.md
web/css/: gameboy.css
web/js/: audio.js  main.js
web/src/: lib.rs
(+342 files in other folders)
