[workspace]
members = [
    "core",
    "app",
    "desktop",
    "android"
]
# `web` is a wasm-only cdylib built via wasm-pack; kept out of the workspace so a
# plain `cargo build` for desktop/Android never tries to compile it for the host.
exclude = [
    "web"
]

resolver = "2"

[profile.release]
codegen-units = 1
lto = "fat"
#debug = 1