[workspace]
members = [
    "core",
    "app",
    "desktop",
    "android"
]
# `web` is a wasm-only cdylib built via wasm-pack; kept out of the workspace so a
# plain `cargo build` for desktop/Android never tries to compile it for the host.
exclude = [
    "web"
]

resolver = "2"

[profile.release]
codegen-units = 1
lto = "fat"
# Aborting on panic drops unwinding tables/landing pads: slightly faster hot
# paths and a smaller binary. Cargo forces unwind for tests/benches regardless,
# and for the Android cdylib it also avoids unwinding across the FFI boundary.
panic = "abort"
strip = true
#debug = 1