[package]
name = "android"
version = "0.1.0"
edition = "2021"
authors = ["troidem <mxmgorin@gmail.com>"]

[lib]
name = "main"
crate-type = ["cdylib"]

[dependencies]
app = { path = "../app", default-features = false }
core = { path = "../core", default-features = false }
sdl2 = { version = "0.38", default-features = false, features = ["unsafe_textures"] }
serde_json = "1.0.141"