[package]
name = "app"
version = "0.1.0"
edition = "2021"
authors = ["troidem <mxmgorin@gmail.com>"]

[features]
default = ["file-dialog", "file-browser"]
file-dialog = []
file-browser = []
sdl2-bundled = ["sdl2/bundled"]
debug = ["core/debug"]

[dependencies]
core = { path = "../core" }
sdl2 = { version = "0.38", default-features = false, features = ["unsafe_textures"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
gl = "0.14.0"
postcard = { version = "1.1.3", features = ["use-std"] }
log = "0.4.27"
indexmap = { version = "2.10.0", features = ["serde"] }
arrayvec = "0.7.6"
zip = "8.2.0"

[target.'cfg(target_os="macos")'.dependencies.sdl2]
features=["bundled", "static-link"]
version="0.38"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "bench"
harness = false
