[package]
name = "core"
version = "0.1.0"
edition = "2021"
authors = ["troidem <mxmgorin@gmail.com>"]

[features]
default = ["jit"]
debug = []
jit = ["dynasmrt", "memoffset", "dynasm"]

[dependencies]
serde_json = "1.0.*"
serde = { version = "1.0.*", features = ["derive"] }
crc = "1.8.1"
log = "0.4.27"
memoffset = { version = "0.9.1", optional = true }
dynasmrt = { version = "3.2.1", optional = true}
dynasm = { version = "3.2.1", optional = true }

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "bench"
harness = false