[package]
name = "desktop"
version = "0.1.0"
edition = "2021"
authors = ["troidem <mxmgorin@gmail.com>"]

[features]
default = ["filepicker"]
filepicker = ["tinyfiledialogs"]

[dependencies]
core = { path = "../core" }
app = { path = "../app" }
tinyfiledialogs = { version = "3.9", optional = true }
log = "0.4.27"
env_logger = "0.11.8"

[[bin]]
name = "gmboy"
path = "src/main.rs"