[package]
name = "emu"
version = "0.1.0"
edition = "2021"
authors = ["troidem <mxmgorin@gmail.com>"]

[features]
default = []

[dependencies]
serde_json = "1.0.*"
serde = { version = "1.0.*", features = ["derive"] }
bincode = "1.3"
crc = "1.3"

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "bench"
harness = false