[package]
name = "core"
version = "0.1.0"
edition = "2021"
authors = ["troidem <mxmgorin@gmail.com>"]

[features]
#default = ["lazy-flags"]
default = []
debug = []
lazy-flags = []
# temporary instrumentation for same-suite APU timing calibration
apu-trace = []
# flat test memory in Bus (Bus::with_bytes); enabled for test builds via the
# self dev-dependency below so `cargo test --release` works, with zero cost
# in production builds
test-bus = []

[dependencies]
serde_json = "1.0.*"
serde = { version = "1.0.*", features = ["derive"] }
crc = "3.4.0"
log = "0.4.27"
# Drop-in `Instant`/`SystemTime` that also works on wasm (backed by performance.now()/Date).
# On native targets this just re-exports `std::time`, so desktop/Android are unaffected.
web-time = "1.1"

[dev-dependencies]
criterion = "0.8.2"
image = "0.25.9"
# enables the flat test-bus for all test/bench builds (including --release)
core = { path = ".", features = ["test-bus"] }

[[bench]]
name = "bench"
harness = false
